      - phoenix: Classic phoenix fractal (escape time)
      - phoenixD: Classic phoenix fractal (distance estimator outside)
      - phoenixI: Classic phoenix fractal (distance estimator inside)
      - phoenixM: A movie of the classic phoenix fractal
      - phoenixM2: Another movie of the classic phoenix fractal
    - Updated
      - color_lut_docs: Now generates images for all CB schemes
  - Miscellaneous
    - N/A
* v20.15.0.0: Feature Release
:PROPERTIES:
:CUSTOM_ID: v20.15.0.0
:END:
  - Fixed Bugs
    - N/A
  - Known Issues
    - N/A
  - API breaking Changes
    - WARNING: Eventually the deprecated headers will be removed.
    - The "all" target has been removed.  Use the "examples" target instead.
    - New release process with 4 component version numbers
  - Deprecated functionality
    - Several people reported conflicts with other packages using the same
      header names
      - Deprecated header color.hpp -- USE MRcolor.hpp instead
      - Deprecated header point2d.hpp -- USE MRpoint2d.hpp instead
      - Deprecated header colorTpl.hpp -- USE MRcolorTpl.hpp instead
  - New functionality
    - Library exported via build/MRasterLib.cmake
    - Package exported via build/MRasterConfig.cmake &
      build/MRasterConfigVersion.cmake
    - Install target created that installs:
      - MRasterLib.cmake
      - MRasterConfig.cmake & MRasterConfigVersion.cmake
      - Non-deprecated headers
    - New include file: mraster_config.hpp
      - Defines for cmake configuration information
      - Functions returning version information Note this change limits future
        version numbers to numeric components.
  - Documentation
    - The color scheme org-mode document has been cleaned up
    - Added change log (this very file!)
    - Updated README.org to reflect change log and remove comments about very
      old versions
  - Examples
    - New
      - kalisetJ.cpp -- Julia style kaliset
      - kalisetM1.cpp -- Mandelbrot style kaliset