@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-10-12 Sat 12:15 -->
+<!-- 2024-10-17 Thu 15:44 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-10-12 12:15:25</i></td>
+<td class="org-left"><i>2024-10-17 15:44:24</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-10-12 12:15:27</i></td>
+<td class="org-left"><i>2024-10-17 15:44:27</i></td>
 </tr>
 </tbody>
 </table>
@@ -317,6 +317,7 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 <li>Updated
 <ul class="org-ul">
 <li>color_lut_docs: Now generates images for all CB schemes</li>
+<li>Several: Updated doxygen markup to use @ instead of backslash</li>
 </ul></li>
 </ul></li>
 <li>Miscellaneous
