@@ -30,18 +30,18 @@
   @endparblock
  @filedetails
 
-  Pick an initial \f$z\in\mathbb{C}\f$, say \f$\frac{1}{10}+\frac{2}{10}i\f$.  Then iterate.  For each iteration let the next $z$ value be \f$f_n(z)\f$ where
-  \f$n\f$ is selected at random.  If we plot the \f$z\f$ points, we obtain the classical Apollony Gasket.
+  Pick an initial @f$z\in\mathbb{C}@f$, say @f$\frac{1}{10}+\frac{2}{10}i@f$.  Then iterate.  For each iteration let the next $z$ value be @f$f_n(z)@f$ where
+  @f$n@f$ is selected at random.  If we plot the @f$z@f$ points, we obtain the classical Apollony Gasket.
 
-  \f[\begin{array}{rcl}
+  @f[\begin{array}{rcl}
     f_1(z) &=& f(z)                         \\
     f_2(z) &=& \frac{-1 + i\sqrt{3}}{2f(z)} \\
     f_3(z) &=& \frac{-1 - i\sqrt{3}}{2f(z)} \\
-  \end{array}\f]
+  \end{array}@f]
 
   Where
 
-  \f[ f(z) = \frac{3}{1-z+\sqrt{3}} - \frac{1+\sqrt{3}}{2+\sqrt{3}} \f]
+  @f[ f(z) = \frac{3}{1-z+\sqrt{3}} - \frac{1+\sqrt{3}}{2+\sqrt{3}} @f]
 */
 /*******************************************************************************************************************************************************.H.E.**/
 /** @cond exj */
