@@ -3,7 +3,7 @@
 /**
  @file      newton_z6.cpp
  @author    Mitch Richling <https://www.mitchr.me>
- @brief     Draw a Newton Fractical for \f$z^6\f$.@EOL
+ @brief     Draw a Newton Fractical for @f$ z^6 @f$.@EOL
  @std       C++20
  @see       https://www.mitchr.me/SS/newton/index.html#z6
  @copyright
