@@ -62,6 +62,7 @@ Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.
       - phoenixM2: Another movie of the classic phoenix fractal
     - Updated
       - color_lut_docs: Now generates images for all CB schemes
+      - Several: Updated doxygen markup to use @ instead of backslash
   - Miscellaneous
     - N/A
 * v20.15.0.0: Feature Release
